Fix spacing to blog page

--- a/src/styles/components/_article-footer-card.scss
+++ b/src/styles/components/_article-footer-card.scss
@@ -29,6 +29,7 @@
   &__title {
     font-size: $fz-m;
     line-height: $lh-md;
+    margin-block: 12px;
   }
 
   &__date {
