--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -18,10 +18,12 @@
   &__upper {
     display: flex;
     flex-direction: column;
+    margin-top: 64px;
 
     @include tablet {
       flex-direction: row;
       justify-content: space-between;
+      margin-top: 120px;
     }
   }
 
